servers/merchant-module/merchant-module-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: merchant-module-deployment
  labels:
    app: merchant-module-service
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: merchant-module-service
      version: v1
  template:
    metadata:
      labels:
        app: merchant-module-service
        version: v1
    spec:
      serviceAccountName: merchant-serviceaccount
      containers:
        - name: merchant-module-service
          image: 083118395813.dkr.ecr.ap-south-1.amazonaws.com/merchant-module:latest
          ports:
            - containerPort: 3003
