servers/merchant-module/merchant-module-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: merchant-module-service
  labels:
    app: merchant-module-service
    service: merchant-module-service
spec:
  selector:
    app: merchant-module-service
  ports:
    - port: 3003
      name: http
